--- a/vis-rest/build.gradle
+++ b/vis-rest/build.gradle
@@ -36,11 +36,12 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("org.mariadb.jdbc:mariadb-java-client:1.1.7")
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.4.0'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.4.0'
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
-
 
 eclipse {
 	classpath {
